--- a/assets/scss/layout/_content.scss
+++ b/assets/scss/layout/_content.scss
@@ -1,12 +1,22 @@
-.horas {
+section {
     padding-block: 6.25rem;
 
-    &__title {
+    &.horas {
+        background-attachment: fixed;
+        background-image: url(../img/section-bg.jpeg);
+        background-position: center center;
+        background-size: cover;
+    }
+
+    .section-title {
         font-size: 2.5rem;
         font-weight: map-get($heading-fw, 'semibold' );
+        &.small {
+            font-size: 1.625rem;
+        }
     }
     
-    &__description {
+    .section-description {
         font-size: 1.375rem;
         font-weight: map-get($heading-fw, 'thin' );
     }
