--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -25,6 +25,7 @@
 /* -------------------------------------------------------------------------- */
 @import 
     'layout/header',
+    'layout/grid',
     'layout/content';
 
 /* -------------------------------------------------------------------------- */
